--- a/cashapp/pubspec.yaml
+++ b/cashapp/pubspec.yaml
@@ -1,14 +1,17 @@
 name: cashapp
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.3.0 <4.0.0'
+  sdk: ">=3.3.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  flutter_social_button: ^1.1.4+1
+  font_awesome_flutter: ^10.7.0
+  getwidget: ^2.0.4
 
 dev_dependencies:
   flutter_test:
